--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -1,4 +1,4 @@
-nav {
+nav.site-navigation {
     margin-left: 5%;
     margin-top: 0;  
     ul {
@@ -17,20 +17,27 @@ nav {
             margin: 0;
         }
     }
+
+    .icon-menu:before {
+        content: "\e9bd";
+        font-size: 1.9em;
+        color: white;
+        position: relative;
+        display: inline-block;
+    }
 }
 
 
 @media all and (max-width: 500px) {
-    nav{
+    nav.site-navigation {
+        float: right;
         ul {
-            visibility: hidden;
-        }
-    }
-
-    span.icon-menu:hover {
-        nav {
-            ul {
-                visibility: visible;
+            margin: 12px 5px;
+            .link {
+                display: none;
+            }
+            .mid-dot {
+                display: none;
             }
         }
     }
